--- a/Makefile.am
+++ b/Makefile.am
@@ -1,1 +1,6 @@
 bin_PROGRAMS = 
+check_PROGRAMS = pep8test
+pep8test_SOURCES = pep8test.cpp pep8cpu.cpp pep8mem.cpp
+pep8test_LDADD = -ltap++
+AM_CXXFLAGS=-DPKGDIR=\"$(top_srcdir)\"
+TESTS=pep8test
