Build system and option reading

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,6 @@
+noinst_PROGRAMS = pep8exec
 check_PROGRAMS = pep8test
+pep8exec_SOURCES = pep8exec.cpp pep8cpu.cpp pep8mem.cpp
 pep8test_SOURCES = pep8test.cpp pep8cpu.cpp pep8mem.cpp
 pep8test_LDADD = -ltap++
 AM_CXXFLAGS=-DPKGDIR=\"$(top_srcdir)\"
